# agg_algos_template_repo

./: .gitignore  README.md  env_linux.yml  env_windows.yml  main.py  pyproject.toml
conf/: config.yaml  config_pull_data.yaml
conf/data_loader/: no_context.yaml
conf/mlp/: two_layer_mlp.yaml
conf/policy/: averaging.yaml  sl_agg.yaml
data/no_context/: data.csv
editable_proj/: __init__.py  data_loaders.py  dataset_utils.py  policies.py  utils.py
tests/: test_averaging.py  test_inf_iterator.py  test_logistic_reg.py  test_no_context_loader.py  test_replace_nan_dataset.py  test_train_mlp.py  test_two_layer_mlp.py
